nivasa-macros/tests/trybuild/validation_groups_namevalue.stderr
error: expected `#[groups("create", "update")]`
 --> tests/trybuild/validation_groups_namevalue.rs:5:5
  |
5 |     #[groups = "create"]
  |     ^
