nivasa-macros/tests/trybuild/validation_groups_namevalue.rs
use nivasa_macros::Dto;

#[derive(Dto)]
struct CreateForm {
    #[groups = "create"]
    #[is_email]
    email: String,
}

fn main() {}
